# scaffy

./: .env.example  .gitignore  .golangci.yml  Cargo.toml  LICENSE  Makefile  go.mod  go.sum  scaffy.example.yaml
.github/workflows/: ci.yml
cmd/scaffy/: main.go
docs/: SPEC.md
internal/config/: config.go  config_test.go
internal/conversation/: conversation.go  conversation_test.go  openai.go  openai_test.go
internal/llmclient/: client.go  reasoning.go  reasoning_test.go  stream.go  stream_test.go
internal/tools/: bash_exec.go  echo.go  edit_file.go  grep_search.go  list_directory.go  read_file.go  search_files.go  skip.go  tools.go  tools_test.go  web_fetch.go  web_search.go  write_file.go
internal/tui/: messages.go  model.go  model_test.go  update.go  view.go
internal/tui/markdown/: markdown.go  markdown_test.go
internal/tui/styles/: styles.go  styles_test.go
src/: app.rs  conversation.rs  llm_client.rs  main.rs  tools.rs  ui.rs
