[package]
name = "scaffy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.33.0", features = ["chat-completion"] }
async-trait = "0.1.89"
crossterm = "0.28"
dotenvy = "0.15.7"
futures = "0.3.32"
ratatui = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tui-textarea = "0.7.0"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
